parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> graph
Rule 1     graph -> LSQUARE nodelist MID edgelist RSQUARE
Rule 2     graph -> LSQUARE nodelist MID RSQUARE
Rule 3     graph -> LSQUARE MID RSQUARE
Rule 4     nodelist -> node nodelist
Rule 5     nodelist -> node
Rule 6     edgelist -> edge edgelist
Rule 7     edgelist -> edge
Rule 8     node -> LPAREN NUMBER COMMA label mark RPAREN
Rule 9     node -> LPAREN NUMBER COMMA label RPAREN
Rule 10    edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label mark RPAREN
Rule 11    edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label RPAREN
Rule 12    label -> atom COLON label
Rule 13    label -> atom
Rule 14    label -> EMPTY
Rule 15    atom -> NUMBER
Rule 16    atom -> STRING
Rule 17    atom -> CHAR
Rule 18    mark -> MARK_RED
Rule 19    mark -> MARK_GREEN
Rule 20    mark -> MARK_BLUE
Rule 21    mark -> MARK_GREY
Rule 22    mark -> MARK_DASHED

Terminals, with rules where they appear

CHAR                 : 17
COLON                : 12
COMMA                : 8 9 10 10 10 11 11 11
EMPTY                : 14
LPAREN               : 8 9 10 11
LSQUARE              : 1 2 3
MARK_BLUE            : 20
MARK_DASHED          : 22
MARK_GREEN           : 19
MARK_GREY            : 21
MARK_RED             : 18
MID                  : 1 2 3
NUMBER               : 8 9 10 10 10 11 11 11 15
RPAREN               : 8 9 10 11
RSQUARE              : 1 2 3
STRING               : 16
error                : 

Nonterminals, with rules where they appear

atom                 : 12 13
edge                 : 6 7
edgelist             : 1 6
graph                : 0
label                : 8 9 10 11 12
mark                 : 8 10
node                 : 4 5
nodelist             : 1 2 4

Parsing method: LALR

state 0

    (0) S' -> . graph
    (1) graph -> . LSQUARE nodelist MID edgelist RSQUARE
    (2) graph -> . LSQUARE nodelist MID RSQUARE
    (3) graph -> . LSQUARE MID RSQUARE

    LSQUARE         shift and go to state 2

    graph                          shift and go to state 1

state 1

    (0) S' -> graph .



state 2

    (1) graph -> LSQUARE . nodelist MID edgelist RSQUARE
    (2) graph -> LSQUARE . nodelist MID RSQUARE
    (3) graph -> LSQUARE . MID RSQUARE
    (4) nodelist -> . node nodelist
    (5) nodelist -> . node
    (8) node -> . LPAREN NUMBER COMMA label mark RPAREN
    (9) node -> . LPAREN NUMBER COMMA label RPAREN

    MID             shift and go to state 4
    LPAREN          shift and go to state 6

    nodelist                       shift and go to state 3
    node                           shift and go to state 5

state 3

    (1) graph -> LSQUARE nodelist . MID edgelist RSQUARE
    (2) graph -> LSQUARE nodelist . MID RSQUARE

    MID             shift and go to state 7


state 4

    (3) graph -> LSQUARE MID . RSQUARE

    RSQUARE         shift and go to state 8


state 5

    (4) nodelist -> node . nodelist
    (5) nodelist -> node .
    (4) nodelist -> . node nodelist
    (5) nodelist -> . node
    (8) node -> . LPAREN NUMBER COMMA label mark RPAREN
    (9) node -> . LPAREN NUMBER COMMA label RPAREN

    MID             reduce using rule 5 (nodelist -> node .)
    LPAREN          shift and go to state 6

    node                           shift and go to state 5
    nodelist                       shift and go to state 9

state 6

    (8) node -> LPAREN . NUMBER COMMA label mark RPAREN
    (9) node -> LPAREN . NUMBER COMMA label RPAREN

    NUMBER          shift and go to state 10


state 7

    (1) graph -> LSQUARE nodelist MID . edgelist RSQUARE
    (2) graph -> LSQUARE nodelist MID . RSQUARE
    (6) edgelist -> . edge edgelist
    (7) edgelist -> . edge
    (10) edge -> . LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label mark RPAREN
    (11) edge -> . LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label RPAREN

    RSQUARE         shift and go to state 12
    LPAREN          shift and go to state 14

    edgelist                       shift and go to state 11
    edge                           shift and go to state 13

state 8

    (3) graph -> LSQUARE MID RSQUARE .

    $end            reduce using rule 3 (graph -> LSQUARE MID RSQUARE .)


state 9

    (4) nodelist -> node nodelist .

    MID             reduce using rule 4 (nodelist -> node nodelist .)


state 10

    (8) node -> LPAREN NUMBER . COMMA label mark RPAREN
    (9) node -> LPAREN NUMBER . COMMA label RPAREN

    COMMA           shift and go to state 15


state 11

    (1) graph -> LSQUARE nodelist MID edgelist . RSQUARE

    RSQUARE         shift and go to state 16


state 12

    (2) graph -> LSQUARE nodelist MID RSQUARE .

    $end            reduce using rule 2 (graph -> LSQUARE nodelist MID RSQUARE .)


state 13

    (6) edgelist -> edge . edgelist
    (7) edgelist -> edge .
    (6) edgelist -> . edge edgelist
    (7) edgelist -> . edge
    (10) edge -> . LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label mark RPAREN
    (11) edge -> . LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label RPAREN

    RSQUARE         reduce using rule 7 (edgelist -> edge .)
    LPAREN          shift and go to state 14

    edge                           shift and go to state 13
    edgelist                       shift and go to state 17

state 14

    (10) edge -> LPAREN . NUMBER COMMA NUMBER COMMA NUMBER COMMA label mark RPAREN
    (11) edge -> LPAREN . NUMBER COMMA NUMBER COMMA NUMBER COMMA label RPAREN

    NUMBER          shift and go to state 18


state 15

    (8) node -> LPAREN NUMBER COMMA . label mark RPAREN
    (9) node -> LPAREN NUMBER COMMA . label RPAREN
    (12) label -> . atom COLON label
    (13) label -> . atom
    (14) label -> . EMPTY
    (15) atom -> . NUMBER
    (16) atom -> . STRING
    (17) atom -> . CHAR

    EMPTY           shift and go to state 22
    NUMBER          shift and go to state 19
    STRING          shift and go to state 23
    CHAR            shift and go to state 24

    label                          shift and go to state 20
    atom                           shift and go to state 21

state 16

    (1) graph -> LSQUARE nodelist MID edgelist RSQUARE .

    $end            reduce using rule 1 (graph -> LSQUARE nodelist MID edgelist RSQUARE .)


state 17

    (6) edgelist -> edge edgelist .

    RSQUARE         reduce using rule 6 (edgelist -> edge edgelist .)


state 18

    (10) edge -> LPAREN NUMBER . COMMA NUMBER COMMA NUMBER COMMA label mark RPAREN
    (11) edge -> LPAREN NUMBER . COMMA NUMBER COMMA NUMBER COMMA label RPAREN

    COMMA           shift and go to state 25


state 19

    (15) atom -> NUMBER .

    COLON           reduce using rule 15 (atom -> NUMBER .)
    RPAREN          reduce using rule 15 (atom -> NUMBER .)
    MARK_RED        reduce using rule 15 (atom -> NUMBER .)
    MARK_GREEN      reduce using rule 15 (atom -> NUMBER .)
    MARK_BLUE       reduce using rule 15 (atom -> NUMBER .)
    MARK_GREY       reduce using rule 15 (atom -> NUMBER .)
    MARK_DASHED     reduce using rule 15 (atom -> NUMBER .)


state 20

    (8) node -> LPAREN NUMBER COMMA label . mark RPAREN
    (9) node -> LPAREN NUMBER COMMA label . RPAREN
    (18) mark -> . MARK_RED
    (19) mark -> . MARK_GREEN
    (20) mark -> . MARK_BLUE
    (21) mark -> . MARK_GREY
    (22) mark -> . MARK_DASHED

    RPAREN          shift and go to state 27
    MARK_RED        shift and go to state 28
    MARK_GREEN      shift and go to state 29
    MARK_BLUE       shift and go to state 30
    MARK_GREY       shift and go to state 31
    MARK_DASHED     shift and go to state 32

    mark                           shift and go to state 26

state 21

    (12) label -> atom . COLON label
    (13) label -> atom .

    COLON           shift and go to state 33
    RPAREN          reduce using rule 13 (label -> atom .)
    MARK_RED        reduce using rule 13 (label -> atom .)
    MARK_GREEN      reduce using rule 13 (label -> atom .)
    MARK_BLUE       reduce using rule 13 (label -> atom .)
    MARK_GREY       reduce using rule 13 (label -> atom .)
    MARK_DASHED     reduce using rule 13 (label -> atom .)


state 22

    (14) label -> EMPTY .

    RPAREN          reduce using rule 14 (label -> EMPTY .)
    MARK_RED        reduce using rule 14 (label -> EMPTY .)
    MARK_GREEN      reduce using rule 14 (label -> EMPTY .)
    MARK_BLUE       reduce using rule 14 (label -> EMPTY .)
    MARK_GREY       reduce using rule 14 (label -> EMPTY .)
    MARK_DASHED     reduce using rule 14 (label -> EMPTY .)


state 23

    (16) atom -> STRING .

    COLON           reduce using rule 16 (atom -> STRING .)
    RPAREN          reduce using rule 16 (atom -> STRING .)
    MARK_RED        reduce using rule 16 (atom -> STRING .)
    MARK_GREEN      reduce using rule 16 (atom -> STRING .)
    MARK_BLUE       reduce using rule 16 (atom -> STRING .)
    MARK_GREY       reduce using rule 16 (atom -> STRING .)
    MARK_DASHED     reduce using rule 16 (atom -> STRING .)


state 24

    (17) atom -> CHAR .

    COLON           reduce using rule 17 (atom -> CHAR .)
    RPAREN          reduce using rule 17 (atom -> CHAR .)
    MARK_RED        reduce using rule 17 (atom -> CHAR .)
    MARK_GREEN      reduce using rule 17 (atom -> CHAR .)
    MARK_BLUE       reduce using rule 17 (atom -> CHAR .)
    MARK_GREY       reduce using rule 17 (atom -> CHAR .)
    MARK_DASHED     reduce using rule 17 (atom -> CHAR .)


state 25

    (10) edge -> LPAREN NUMBER COMMA . NUMBER COMMA NUMBER COMMA label mark RPAREN
    (11) edge -> LPAREN NUMBER COMMA . NUMBER COMMA NUMBER COMMA label RPAREN

    NUMBER          shift and go to state 34


state 26

    (8) node -> LPAREN NUMBER COMMA label mark . RPAREN

    RPAREN          shift and go to state 35


state 27

    (9) node -> LPAREN NUMBER COMMA label RPAREN .

    LPAREN          reduce using rule 9 (node -> LPAREN NUMBER COMMA label RPAREN .)
    MID             reduce using rule 9 (node -> LPAREN NUMBER COMMA label RPAREN .)


state 28

    (18) mark -> MARK_RED .

    RPAREN          reduce using rule 18 (mark -> MARK_RED .)


state 29

    (19) mark -> MARK_GREEN .

    RPAREN          reduce using rule 19 (mark -> MARK_GREEN .)


state 30

    (20) mark -> MARK_BLUE .

    RPAREN          reduce using rule 20 (mark -> MARK_BLUE .)


state 31

    (21) mark -> MARK_GREY .

    RPAREN          reduce using rule 21 (mark -> MARK_GREY .)


state 32

    (22) mark -> MARK_DASHED .

    RPAREN          reduce using rule 22 (mark -> MARK_DASHED .)


state 33

    (12) label -> atom COLON . label
    (12) label -> . atom COLON label
    (13) label -> . atom
    (14) label -> . EMPTY
    (15) atom -> . NUMBER
    (16) atom -> . STRING
    (17) atom -> . CHAR

    EMPTY           shift and go to state 22
    NUMBER          shift and go to state 19
    STRING          shift and go to state 23
    CHAR            shift and go to state 24

    atom                           shift and go to state 21
    label                          shift and go to state 36

state 34

    (10) edge -> LPAREN NUMBER COMMA NUMBER . COMMA NUMBER COMMA label mark RPAREN
    (11) edge -> LPAREN NUMBER COMMA NUMBER . COMMA NUMBER COMMA label RPAREN

    COMMA           shift and go to state 37


state 35

    (8) node -> LPAREN NUMBER COMMA label mark RPAREN .

    LPAREN          reduce using rule 8 (node -> LPAREN NUMBER COMMA label mark RPAREN .)
    MID             reduce using rule 8 (node -> LPAREN NUMBER COMMA label mark RPAREN .)


state 36

    (12) label -> atom COLON label .

    RPAREN          reduce using rule 12 (label -> atom COLON label .)
    MARK_RED        reduce using rule 12 (label -> atom COLON label .)
    MARK_GREEN      reduce using rule 12 (label -> atom COLON label .)
    MARK_BLUE       reduce using rule 12 (label -> atom COLON label .)
    MARK_GREY       reduce using rule 12 (label -> atom COLON label .)
    MARK_DASHED     reduce using rule 12 (label -> atom COLON label .)


state 37

    (10) edge -> LPAREN NUMBER COMMA NUMBER COMMA . NUMBER COMMA label mark RPAREN
    (11) edge -> LPAREN NUMBER COMMA NUMBER COMMA . NUMBER COMMA label RPAREN

    NUMBER          shift and go to state 38


state 38

    (10) edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER . COMMA label mark RPAREN
    (11) edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER . COMMA label RPAREN

    COMMA           shift and go to state 39


state 39

    (10) edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA . label mark RPAREN
    (11) edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA . label RPAREN
    (12) label -> . atom COLON label
    (13) label -> . atom
    (14) label -> . EMPTY
    (15) atom -> . NUMBER
    (16) atom -> . STRING
    (17) atom -> . CHAR

    EMPTY           shift and go to state 22
    NUMBER          shift and go to state 19
    STRING          shift and go to state 23
    CHAR            shift and go to state 24

    label                          shift and go to state 40
    atom                           shift and go to state 21

state 40

    (10) edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label . mark RPAREN
    (11) edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label . RPAREN
    (18) mark -> . MARK_RED
    (19) mark -> . MARK_GREEN
    (20) mark -> . MARK_BLUE
    (21) mark -> . MARK_GREY
    (22) mark -> . MARK_DASHED

    RPAREN          shift and go to state 42
    MARK_RED        shift and go to state 28
    MARK_GREEN      shift and go to state 29
    MARK_BLUE       shift and go to state 30
    MARK_GREY       shift and go to state 31
    MARK_DASHED     shift and go to state 32

    mark                           shift and go to state 41

state 41

    (10) edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label mark . RPAREN

    RPAREN          shift and go to state 43


state 42

    (11) edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label RPAREN .

    LPAREN          reduce using rule 11 (edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label RPAREN .)
    RSQUARE         reduce using rule 11 (edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label RPAREN .)


state 43

    (10) edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label mark RPAREN .

    LPAREN          reduce using rule 10 (edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label mark RPAREN .)
    RSQUARE         reduce using rule 10 (edge -> LPAREN NUMBER COMMA NUMBER COMMA NUMBER COMMA label mark RPAREN .)

